deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: streamlit-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: streamlit-label
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
