deploy/ingress_tarefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /sl
        pathType: Prefix
        backend:
          service:
            name: streamlit-svc
            port:
              number: 80
